fixed horizontal scroll bar

--- a/dark.css
+++ b/dark.css
@@ -6,7 +6,6 @@
   body {
     background-color: #10202f;
     text-align: center;
-    width: 100%;
 
   }
 
