--- a/light.css
+++ b/light.css
@@ -6,7 +6,6 @@
   body {
     background-color: #fff;
     text-align: center;
-    width: 100vw;
 
   }
 
